--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -25,7 +25,7 @@
                 <md-icon md-font-icon="fa fa-bars"></md-icon>
             </md-button>
             <h2>
-                <span>App</span>
+                <a href="#/todos" ><span>Home</span></a>
             </h2>
             <span flex></span>
         </div>
