--- a/src/main/old/pages/index.html
+++ b/src/main/old/pages/index.html
@@ -17,7 +17,7 @@
         }
     </script>
 </head>
-<body ng-cloak>
+<body ng-controller="StorageController as ctrl" ng-cloak>
 
     <md-toolbar class="md-hue-2">
         <div class="md-toolbar-tools">
@@ -52,9 +52,7 @@
 
     <script src="../js/src/application.js"></script>
 
-    <script src="../js/src/todo/todoService.js"></script>
     <script src="../js/src/todo/todo.js"></script>
-
 
 </body>
 </html>
